# Wnclient

./: AutoUse.json  Boot.txt  CNAME  Client.json  Modlist.json  README.md  Run_As_Admin.py  UAC_Bypass.py  Update.py  ascii.txt  config.json  config.toml  getit.c  is_admin.py  lwjgl.py  main.py  mes.py  mian.py  rain_config.json  readme.md  requirements.txt  set_auto_use.json  setup.py  version.json  wnc.py  wncli.bat
Env_Bin/: wncli.bat
Help/: help.cn.txt  help.en.txt  mod_dev_tutorial.cn.txt  mod_dev_tutorial.en.txt
InstallScript/: gen_path.py  install.ps1  install.sh
Mod/Acrylic/: Acrylic.py  Mappings.json  Wnclient.toml
Mod/AutoBackup/: AutoBackup.py  Mappings.json  Wnclient.toml
Mod/Dll_injector/: Dll_injector.py  Mappings.json  Wnclient.toml
Mod/GetAdmin/: GetAdmin.py  Mappings.json  Wnclient.toml
Mod/NE_Name/: Mappings.json  Ne_Name.py  Wnclient.toml
Mod/NeoFetch/: Mappings.json  NeoFetch.py  Wnclient.toml
MotionBlur/: CMakeLists.txt  README.md
MotionBlur/src/: BlurProcessor.cpp  BlurProcessor.h  FrameBuffer.cpp  FrameBuffer.h  Platform.h  PlatformLinux.cpp  PlatformWindows.cpp  ScreenCapture.h  ScreenCaptureLinux.cpp  ScreenCaptureWindows.cpp  TransparentWindow.h  TransparentWindowLinux.cpp  TransparentWindowWindows.cpp  main.cpp
Website/: index.html  install.ps1  install.sh  script.js  styles.css
models/: README_cn.md  _cps_gui.py  _fps_gui.py  _keyb_gui.py  _mousewin_gui.py  cps.json  cps.pos.json  cps.py  fps.json  fps.py  getit.json  getit.py  keyb.json  keyb.py  mousewin.json  mousewin.py  rains.json  rains.py  readme.txt
(+28 files in other folders)
